--- a/gz_resources/worlds/wavefield.sdf.jinja
+++ b/gz_resources/worlds/wavefield.sdf.jinja
@@ -29,7 +29,7 @@
       name="ignition::gazebo::systems::Contact">
     </plugin> -->
 
-        <light type="directional"
+        <!-- <light type="directional"
             name="sun">
             <cast_shadows>true</cast_shadows>
             <pose>0 0 10 0 0 0</pose>
@@ -42,14 +42,14 @@
                 <quadratic>0.001</quadratic>
             </attenuation>
             <direction>-0.5 0.1 -0.9</direction>
-        </light>
+        </light> -->
 
-        <scene>
+        <!-- <scene>
             <sky></sky>
             <grid>false</grid>
             <ambient>1.0 1.0 1.0</ambient>
             <background>0.8 0.8 0.8</background>
-        </scene>
+        </scene> -->
 
         <plugin filename="libPublisherPlugin.so" name="maritime::PublisherPlugin">
         <message type="gz.msgs.Param" topic="/gazebo/wavefield/parameters"
@@ -88,5 +88,36 @@
         <!-- <include>
             <uri>model://ground_plane</uri>
         </include> -->
+
+      <model name='takeoff_platform'>
+        <pose>1.0 0 3.5 0 0 0</pose>
+        <static>true</static>
+        <link name="takeoff_platform">
+          <visual name="visual">
+            <geometry>
+              <box>
+                <size>2.0 2.0 1.0</size>
+              </box>
+            </geometry>
+          </visual>
+          <collision name="collision">
+            <geometry>
+              <box>
+                <size>2.0 2.0 1.0</size>
+              </box>
+            </geometry>
+          </collision>
+        </link>
+      </model>
+      <!-- <include>
+        <name>Start Gate</name>
+        <pose>-20.10 0 0 0 0 -1.570796</pose>
+        <uri>https://fuel.ignitionrobotics.org/1.0/openrobotics/models/Dock</uri>
+      </include> -->
+      <!-- <include>
+        <name>Beach</name>
+        <pose>-20.0 0 -1.0 0 0 -1.570796</pose>
+        <uri>https://fuel.ignitionrobotics.org/1.0/openrobotics/models/Beach</uri>
+      </include> -->
     </world>
 </sdf>
